BMI calculator done just FAQ left

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <input type="text" class="height" placeholder="Enter height">
             </form>
             <div class="submit">
+                <button class="resetBtn">Reset</button>
                 <button class="submitBtn">Submit</button>
             </div>
             
@@ -27,7 +28,7 @@
             </div>
 
             <div class="msgContainer">
-                <p class="msg">Check whether your are healthy or not.</p>
+                <p class="msg">Check whether you are healthy or not.</p>
             </div>
         </div>
     </div>
