--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculator</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./images/bmi.png">
 </head>
 <body>
     <div class="container"> <!--100% vala div-->
